--- a/app/views/feeds/new.html.erb
+++ b/app/views/feeds/new.html.erb
@@ -1,5 +1,9 @@
-<h1>新しく画像を投稿する</h1>
+<h1>New Feed</h1>
 
-<%= render 'form', feed: @feed %>
+<% if logged_in? %>
+  <%= render 'form', feed: @feed %>
+<% else %>
+  <h4>Please login</h4>
+<% end %>
 
-<%= link_to 'Back', feeds_path %>
+<%= link_to '画像一覧へ戻る', feeds_path %>
