--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,13 +15,16 @@
     <% end %>
 
     <% if logged_in? %>
-      <%= link_to "プロフィール画面", user_path(current_user.id) %>
-      <%= link_to "ログアウト", session_path(current_user.id), method: :delete %>
+      <%= link_to "Profile", user_path(current_user.id) %>
+      <%= link_to "Logout", session_path(current_user.id), method: :delete %>
+      <%= link_to "投稿画面へ", new_feed_path %>
+      <%= link_to "投稿一覧へ", feeds_path %>
     <% else %>
-      <%= link_to "新しいアカウントを作成", new_user_path %>
-      <%= link_to "ログイン", new_session_path %>
+      <%= link_to "Sign up", new_user_path %>
+      <%= link_to "Login", new_session_path %>
     <% end %>
 
     <%= yield %>
+
   </body>
 </html>
