--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<h1>新規アカウント作成</h1>
+<h1>Sign up</h1>
 
 <% if @user.errors.any? %>
   <div id="error_explanation">
@@ -14,15 +14,15 @@
 <%= form_with(model: @user, local: true) do |f| %>
   <%= f.label :name %>
   <%= f.text_field :name %>
-
+<br>
   <%= f.label :email %>
   <%= f.email_field :email %>
-
+<br>
   <%= f.label :password %>
   <%= f.password_field :password %>
-
+<br>
   <%= f.label :password_confirmation %>
   <%= f.password_field :password_confirmation %>
-
+<br>
   <%= f.submit "Create my account" %>
 <% end %>
