--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,6 @@
 <h1><%= @user.name %>のページ</h1>
 
 <p>メールアドレス: <%= @user.email %></p>
+<%= link_to '画像を投稿する', new_feed_path %>
+<br>
+<%= link_to '投稿一覧へ', feeds_path %>
