ユーザー編集・削除&プロフィール画像設定

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,19 @@
 <h1><%= @user.name %>のページ</h1>
 
+<div class="user_icon">
+  <%= image_tag "#{@user.image}"%>
+</div>
+
 <p>メールアドレス: <%= @user.email %></p>
-<%= link_to '画像を投稿する', new_feed_path %>
+
+<p>一言: <%= @user.profile %></p>
 <br>
-<%= link_to '投稿一覧へ', feeds_path %>
+<br>
+<br>
+<% if @user.id == current_user.id %>
+  <%= link_to "ユーザー情報を編集する", edit_user_path(@user) %>
+  <%= link_to "ユーザー情報を削除する", @user, method: :delete, data: {confirm: '本当に削除しますか?'} %>
+  <%= link_to '画像を投稿する', new_feed_path %>
+<% else %>
+  <%= link_to '投稿一覧へ', feeds_path %>
+<% end %>
