--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,28 +1,3 @@
-<h1>Sign up</h1>
+<h1>新しくユーザーを登録する</h1>
 
-<% if @user.errors.any? %>
-  <div id="error_explanation">
-    <h2><%= pluralize(@user.errors.count, "error") %> prohibited this @user from being saved:</h2>
-    <ul>
-    <% @user.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
-    <% end %>
-    </ul>
-  </div>
-<% end %>
-
-<%= form_with(model: @user, local: true) do |f| %>
-  <%= f.label :name %>
-  <%= f.text_field :name %>
-<br>
-  <%= f.label :email %>
-  <%= f.email_field :email %>
-<br>
-  <%= f.label :password %>
-  <%= f.password_field :password %>
-<br>
-  <%= f.label :password_confirmation %>
-  <%= f.password_field :password_confirmation %>
-<br>
-  <%= f.submit "Create my account" %>
-<% end %>
+<%= render 'form', user: @user %>
