--- a/app/views/feeds/show.html.erb
+++ b/app/views/feeds/show.html.erb
@@ -1,8 +1,18 @@
 <p>
-  <strong>Image:</strong>
+  <strong>画像の詳細</strong>
   <br>
   <%= image_tag @feed.image.url %>
+  <br>
+  <%= @feed.content %>
 </p>
+
+<% unless @feed.user_id == current_user.id %>
+  <% if @favorite.present? %>
+    <%= link_to 'お気に入り解除する', favorite_path(id: @favorite.id), method: :delete, class: 'btn btn-danger' %>
+  <% else %>
+    <%= link_to 'お気に入りする', favorites_path(feed_id: @feed.id), method: :post, class: 'btn btn-primary' %>
+  <% end %>
+<% end %>
 
 <%= link_to '画像を編集する', edit_feed_path(@feed) %> |
 <%= link_to '画像一覧へ戻る', feeds_path %>
