--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,7 @@
       <%= link_to "Logout", session_path(current_user.id), method: :delete %>
       <%= link_to "投稿画面へ", new_feed_path %>
       <%= link_to "投稿一覧へ", feeds_path %>
+      <%= link_to "お気に入り一覧へ", favorite_picture_user_path(current_user.id) %>
     <% else %>
       <%= link_to "Sign up", new_user_path %>
       <%= link_to "Login", new_session_path %>
