--- a/app/views/users/favorite_picture.html.erb
+++ b/app/views/users/favorite_picture.html.erb
@@ -1,5 +1,4 @@
-<h1><%= @user.user_name %>のお気に入り一覧</h1>
-
+<h1><%= @user.name %>のお気に入り一覧</h1>
 <div class="user_icon">
   <%= image_tag "#{@user.image}"%>
 </div>
@@ -8,8 +7,8 @@
   <tbody>
     <% @favorites.each do |feed| %>
       <tr>
-        <td><%= feed.user.user_name %></td>
-        <td><%= image_tag "#{feed.image}" %></td>
+        <td><%= feed.user.name %></td>
+        <td><%= image_tag "#{feed.image}", :size =>'200x200' %></td>
         <td><%= feed.content %></td>
       </tr>
     <% end %>
