--- a/app/views/users/favorite_picture.html.erb
+++ b/app/views/users/favorite_picture.html.erb
@@ -1,6 +1,6 @@
 <h1><%= @user.name %>のお気に入り一覧</h1>
 <div class="user_icon">
-  <%= image_tag "#{@user.image}"%>
+  <%= image_tag "#{@user.image}", :size =>'200x200'%>
 </div>
 
 <table>
@@ -8,7 +8,7 @@
     <% @favorites.each do |favorite| %>
       <tr>
         <td><%= favorite.user.name %></td>
-        <td><%= image_tag "#{favorite.image}" %></td>
+        <td><%= image_tag "#{favorite.image}", :size =>'200x200' %></td>
         <td><%= favorite.content %></td>
       </tr>
     <% end %>
