--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <h1><%= @user.name %>のページ</h1>
 
 <div class="user_icon">
-  <%= image_tag "#{@user.image}"%>
+  <%= image_tag "#{@user.image}", :size =>'200x200'%>
 </div>
 
 <p>メールアドレス: <%= @user.email %></p>
