--- a/app/views/feeds/show.html.erb
+++ b/app/views/feeds/show.html.erb
@@ -1,7 +1,7 @@
 <p>
   <strong>画像の詳細</strong>
   <br>
-  <%= image_tag @feed.image.url %>
+  <%= image_tag @feed.image.url, :size =>'200x200' %>
   <br>
   <%= @feed.content %>
 </p>
@@ -14,5 +14,9 @@
   <% end %>
 <% end %>
 
-<%= link_to '画像を編集する', edit_feed_path(@feed) %> |
+<%if @feed.user_id == current_user.id %>
+  <%= link_to '画像を編集', edit_feed_path(@feed) %>
+  <%= link_to '画像を削除', @feed, method: :delete, data: { confirm: 'Are you sure?' } %>
+<% end %>
+
 <%= link_to '画像一覧へ戻る', feeds_path %>
